Enhance intelligent interrupt handler with detailed architecture and improved command handling
- Updated README to include comprehensive architecture overview and decision logic flow.
- Expanded default ignore words and interrupt commands for better customization.
- Improved handling of interrupt commands to ensure immediate response and prevent unnecessary pauses.

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,3 +1,6 @@
 LIVEKIT_API_SECRET="<your livekit api secret>"
 LIVEKIT_API_KEY="<your livekit api key>"
 LIVEKIT_URL="<your livekit ws url>"
+DEEPGRAM_API_KEY="<your deepgram api key>"
+CARTESIA_API_KEY="<your cartesia api key>"
+GOOGLE_API_KEY="<your google gemini api key>"
