added VAD flag, fuzzy logic to for backchannel classification, added a script to remove backchannel words from the aggregate transcript

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,10 @@ docs/
 
 # Examples for development
 examples/dev/*
+
+# Interruption handling test artifacts
+conv_log*.txt
+conv*.txt
+test_run.txt
+test_run2.txt
+tests/test_interruption_filter.py
