--- a/livekit-agents/pyproject.toml
+++ b/livekit-agents/pyproject.toml
@@ -60,6 +60,7 @@ dependencies = [
 mcp = ["mcp>=1.10.0, <2; python_version >= '3.10'"]
 codecs = ["av>=12.0.0", "numpy>=1.26.0"]
 images = ["pillow>=10.3.0"]
+interruption-semantics = ["sentence-transformers>=2.0.0"]
 anam = ["livekit-plugins-anam>=1.3.3"]
 anthropic = ["livekit-plugins-anthropic>=1.3.3"]
 assemblyai = ["livekit-plugins-assemblyai>=1.3.3"]
