feat(voice): add smart backchannel detection to prevent false interruptions
Replaces standard acoustic VAD interruption with a semantic check. The agent now ignores passive acknowledgments (yeah, ok) and only interrupts for new requests.

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,7 @@ docs/
 
 # Examples for development
 examples/dev/*
+
+# solution's ignored files
+assigment_solution/.env
+assigment_solution/__pycache__
