Feat:Intelligent Interrupt Handling

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,3 +1,5 @@
-LIVEKIT_API_SECRET="<your livekit api secret>"
-LIVEKIT_API_KEY="<your livekit api key>"
-LIVEKIT_URL="<your livekit ws url>"
+LIVEKIT_URL=ws://localhost:7880
+LIVEKIT_API_KEY=devkey
+LIVEKIT_API_SECRET=secret
+OPENAI_API_KEY=
+INTERRUPTION_IGNORE_WORDS=["yeah", "ok", "okay", "hmm", "mhmm", "right", "uh-huh", "uh", "um", "got it", "yea"]
