--- a/examples/voice_agents/requirements.txt
+++ b/examples/voice_agents/requirements.txt
@@ -1,3 +1,10 @@
 livekit-agents[openai, cartesia, elevenlabs, deepgram, silero, turn-detector, mcp]>=1.0
 python-dotenv>=1.0
 duckduckgo-search>=8.0
+livekit-agents>=1.0.0
+livekit-plugins-silero>=0.7.0
+livekit-plugins-deepgram>=0.6.0
+livekit-plugins-openai>=0.8.0
+livekit-plugins-cartesia>=0.4.0
+livekit-plugins-turn-detector>=0.2.0
+python-dotenv>=1.0.0
