requirement.txt changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 livekit
-elevenlabs
-livekit-plugins
+livekit-agents
+livekit-api
 livekit-plugins-deepgram
 livekit-plugins-openai
 livekit-plugins-silero
 livekit-plugins-elevenlabs
 python-dotenv
+
