--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env.local
 .venv
 env/
 venv/
@@ -177,3 +178,4 @@ docs/
 
 # Examples for development
 examples/dev/*
+.env.local
