--- a/examples/voice_agents/requirements.txt
+++ b/examples/voice_agents/requirements.txt
@@ -1,3 +1,6 @@
-livekit-agents[openai, cartesia, elevenlabs, deepgram, silero, turn-detector, mcp]>=1.0
-python-dotenv>=1.0
-duckduckgo-search>=8.0
+livekit-agents>=0.11.0
+livekit-plugins-deepgram>=0.6.0
+livekit-plugins-google>=0.5.0
+livekit-plugins-silero>=0.5.0
+livekit-plugins-turn-detector>=0.3.0
+python-dotenv>=1.0.0
