Voice Agent Interrupts Updates

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,3 +1,6 @@
 LIVEKIT_API_SECRET="<your livekit api secret>"
 LIVEKIT_API_KEY="<your livekit api key>"
 LIVEKIT_URL="<your livekit ws url>"
+# LIVEKIT_API_SECRET=wss://voiceagent-dc0i4u42.livekit.cloud
+# LIVEKIT_API_KEY=APItyGXX2i4Sewi
+# LIVEKIT_URL=f2wOSJM7a58rf9TSDcFtYcgqlu95Nq2oYfObb4oT76mB
