Update requirements.txt with additional packages
Added new dependencies for voice agent project.

--- a/examples/voice_agents/requirements.txt
+++ b/examples/voice_agents/requirements.txt
@@ -1,3 +1,29 @@
 livekit-agents[openai, cartesia, elevenlabs, deepgram, silero, turn-detector, mcp]>=1.0
-python-dotenv>=1.0
-duckduckgo-search>=8.0
+aiocsv==1.4.0
+aiofiles==25.1.0
+aiohttp==3.13.2
+ddgs==9.9.3
+duckduckgo_search==8.1.1
+fastapi==0.123.9
+httpx==0.28.1
+jokeapi==1.0.5
+langchain==1.1.2
+langchain_core==1.1.1
+langgraph==1.0.4
+librosa==0.11.0
+livekit==1.0.20
+livekit_api==1.1.0
+livekit_blingfire==1.0.0
+livekit_protocol==1.1.1
+llama_index==0.14.10
+numpy==2.3.5
+openai==2.9.0
+Pillow==12.0.0
+protobuf==6.33.1
+pydantic==2.12.5
+pydantic_core==2.41.5
+pytest==9.0.1
+python-dotenv==1.2.1
+PyYAML==6.0.3
+typing_extensions==4.15.0
+uvicorn==0.38.0
