--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,3 +1,3 @@
-LIVEKIT_API_SECRET="<your livekit api secret>"
-LIVEKIT_API_KEY="<your livekit api key>"
-LIVEKIT_URL="<your livekit ws url>"
+LIVEKIT_API_SECRET=oJltKuLEer3Mr5qiiNhvQ7afrcEbSIQvKfNSMPp7twgA
+LIVEKIT_API_KEY=APITwnZpLmdaQBu
+LIVEKIT_URL=wss://agent-assignment-ywfd30pi.livekit.cloud
