feat: add context-aware backchanneling filter for LiveKit voice agents
implementation readme and env

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,3 +1,10 @@
-LIVEKIT_API_SECRET="<your livekit api secret>"
+﻿LIVEKIT_API_SECRET="<your livekit api secret>"
 LIVEKIT_API_KEY="<your livekit api key>"
 LIVEKIT_URL="<your livekit ws url>"
+
+GOOGLE_APPLICATION_CREDENTIALS="./gcloud.json"
+GOOGLE_API_KEY="<your google api key for gemini>"
+
+BACKCHANNELING_ENABLED=true
+BACKCHANNELING_FILLER_WORDS=yeah,ok,hmm,right,uh-huh,got it
+BACKCHANNELING_COMMAND_WORDS=stop,wait,no,help,what,why
