--- a/examples/voice_agents/requirements.txt
+++ b/examples/voice_agents/requirements.txt
@@ -1,3 +1,7 @@
-livekit-agents[openai, cartesia, elevenlabs, deepgram, silero, turn-detector, mcp]>=1.0
+livekit-agents>=1.0
+livekit-plugins-silero>=1.0
+livekit-plugins-groq>=1.0
+livekit-plugins-deepgram>=1.0
+livekit-plugins-cartesia>=1.0
+livekit-plugins-turn-detector>=1.0
 python-dotenv>=1.0
-duckduckgo-search>=8.0
