--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,3 +1,6 @@
 LIVEKIT_API_SECRET="<your livekit api secret>"
 LIVEKIT_API_KEY="<your livekit api key>"
 LIVEKIT_URL="<your livekit ws url>"
+
+GROQ_API_KEY="your_groq_key"
+DEEPGRAM_API_KEY="your_deepgram_key"
