feat: implement context-aware interruption logic and ignore list

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,3 +1,11 @@
 LIVEKIT_API_SECRET="<your livekit api secret>"
 LIVEKIT_API_KEY="<your livekit api key>"
 LIVEKIT_URL="<your livekit ws url>"
+
+OPENAI_API_KEY="<your openai api key>"
+DEEPGRAM_API_KEY="<your deepgram api key>"
+CARTESIA_API_KEY="<your cartesia api key>"
+
+# Assignment: Interruption Logic Configuration
+# Comma-separated list of words that will NOT trigger an interruption
+IGNORE_WORDS=yeah,ok,okay,hmm,uh,um,right,yep,aha,uh-huh
