--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,3 +1,5 @@
-LIVEKIT_API_SECRET="<your livekit api secret>"
-LIVEKIT_API_KEY="<your livekit api key>"
-LIVEKIT_URL="<your livekit ws url>"
+LIVEKIT_API_SECRET=
+LIVEKIT_API_KEY=
+LIVEKIT_URL=
+OPENAI_API_KEY=
+DEEPGRAM_API_KEY=
